--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,6 +199,7 @@
   <!-- Toast -->
   <div class="toast" id="toast"></div>
 
+  <script src="config.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
