Fix claude response json

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,8 +114,14 @@
           </div>
 
           <div class="form-group">
-            <label class="form-label">書籍連結</label>
+            <label class="form-label">書籍連結（誠品等）</label>
             <input type="url" class="form-input" id="url" name="url" placeholder="https://example.com">
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">博客來連結</label>
+            <input type="url" class="form-input" id="books_url" name="books_url" placeholder="https://www.books.com.tw/products/...">
+            <small style="color: var(--text-secondary); font-size: 0.85rem; margin-top: 4px; display: block;">用於自動抓取封面圖片</small>
           </div>
 
           <div class="form-group">
